--- a/calendar.html
+++ b/calendar.html
@@ -1041,7 +1041,7 @@
                                     >
                                       <div class="_1skxaokw">
                                         <div>
-                                          <span class="_1p7iugi">9:00 PM</span>
+                                          <span class="calendar-sideba__sched-event-time-wrapper">9:00 PM</span>
                                         </div>
                                         <span class="_wu6inh">0/10</span
                                         ><span class="_ugyakgt"
@@ -1732,16 +1732,16 @@
                           class="heading"
                           elementtiming="LCP-target"
                         >
-                          <div id="calendar-sidebar-heading" class="_qwh8zw">
+                          <div id="calendar-sidebar-heading" class="calendar-sideba__header">
                             Jul 1, 2022
                           </div>
                         </h1>
                         <div style="margin-top: 8px; margin-bottom: 24px">
-                          <div class="_1ir6ymk">
+                          <div class="calendar-sideba__qnty-sched">
                             Add availability so guests can start booking!
                           </div>
                         </div>
-                        <div class="_v72lrv">
+                        <div class="calendar-sideba__sched-btn-wrapper">
                           <button
                             data-testid="schedule-experience-button"
                             type="button"
