--- a/calendar_week.html
+++ b/calendar_week.html
@@ -3186,32 +3186,32 @@
                           class="heading"
                           elementtiming="LCP-target"
                         >
-                          <div id="calendar-sidebar-heading" class="_qwh8zw">
+                          <div id="calendar-sidebar-heading" class="calendar-sideba__header">
                             Jul 9, 2022
                           </div>
                         </h1>
                         <div style="margin-top: 8px; margin-bottom: 24px">
-                          <div class="_1ir6ymk">2 SCHEDULED</div>
+                          <div class="calendar-sideba__qnty-sched">2 SCHEDULED</div>
                         </div>
-                        <div class="_1ouw2w0">
+                        <div class="calendar-sideba__sched-event">
                           <button
                             data-testid="Cooking Deep Fried Bright Orange Battered Eggs"
                             type="button"
                             class="main_content__agenda-list-btn"
                           >
-                            <div class="_1pmsz24">
+                            <div class="calendar-sideba__sched-event-wrapper">
                               <div class="full__height">
-                                <div class="_1n9ujnd">
-                                  <div class="_1oujxnw">
-                                    <div class="_1p7iugi">
+                                <div class="calendar-sideba__sched-event-text-wrapper">
+                                  <div class="calendar-sideba__sched-event-desc-wrapper">
+                                    <div class="calendar-sideba__sched-event-time-wrapper">
                                       <span class="text-highlight dir dir-ltr"
                                         >12:00 to 12:30 PM (PST)</span
                                       ><span aria-hidden="true"
                                         >12:00 – 12:30 PM (PST)</span
                                       >
                                     </div>
-                                    <div class="_1yqloi9">
-                                      <div class="_1dmr5la">
+                                    <div class="calendar-sideba__sched-event-desc-text-wrapper">
+                                      <div class="calendar-sideba__sched-event-desc-text-todo">
                                         <div class="inline">
                                           Cooking Deep Fried Bright Orange
                                           Battered Eggs
@@ -3220,8 +3220,8 @@
                                       Hosted by Jose Angelo Ramirez
                                     </div>
                                   </div>
-                                  <div class="_l7kbrl">
-                                    <div class="_1d2y1bv">
+                                  <div class="calendar-sideba__sched-event-note-wrapper">
+                                    <div class="calendar-sideba__sched-event-note">
                                       <span class="text-highlight dir dir-ltr"
                                         >Private group · Not booked yet</span
                                       ><span aria-hidden="true"
@@ -3232,7 +3232,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_54q55d" aria-hidden="true">
+                                <div class="calendar-sideba__sched-event-img-wrapper" aria-hidden="true">
                                   <div
                                     class="img-middle"
                                     role="img"
@@ -3272,25 +3272,25 @@
                             </div>
                           </button>
                         </div>
-                        <div class="_1ouw2w0">
+                        <div class="calendar-sideba__sched-event">
                           <button
                             data-testid="Cooking Deep Fried Bright Orange Battered Eggs"
                             type="button"
                             class="main_content__agenda-list-btn"
                           >
-                            <div class="_1pmsz24">
+                            <div class="calendar-sideba__sched-event-wrapper">
                               <div class="full__height">
-                                <div class="_1n9ujnd">
-                                  <div class="_1oujxnw">
-                                    <div class="_1p7iugi">
+                                <div class="calendar-sideba__sched-event-text-wrapper">
+                                  <div class="calendar-sideba__sched-event-desc-wrapper">
+                                    <div class="calendar-sideba__sched-event-time-wrapper">
                                       <span class="text-highlight dir dir-ltr"
                                         >11:00 to 11:30 PM (PST)</span
                                       ><span aria-hidden="true"
                                         >11:00 – 11:30 PM (PST)</span
                                       >
                                     </div>
-                                    <div class="_1yqloi9">
-                                      <div class="_1dmr5la">
+                                    <div class="calendar-sideba__sched-event-desc-text-wrapper">
+                                      <div class="calendar-sideba__sched-event-desc-text-todo">
                                         <div class="inline">
                                           Cooking Deep Fried Bright Orange
                                           Battered Eggs
@@ -3299,8 +3299,8 @@
                                       Hosted by Jose Angelo Ramirez
                                     </div>
                                   </div>
-                                  <div class="_l7kbrl">
-                                    <div class="_1d2y1bv">
+                                  <div class="calendar-sideba__sched-event-note-wrapper">
+                                    <div class="calendar-sideba__sched-event-note">
                                       <span class="text-highlight dir dir-ltr"
                                         >Private group · Not booked yet</span
                                       ><span aria-hidden="true"
@@ -3311,7 +3311,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_54q55d" aria-hidden="true">
+                                <div class="calendar-sideba__sched-event-img-wrapper" aria-hidden="true">
                                   <div
                                     class="img-middle"
                                     role="img"
@@ -3351,7 +3351,7 @@
                             </div>
                           </button>
                         </div>
-                        <div class="_v72lrv">
+                        <div class="calendar-sideba__sched-btn-wrapper">
                           <button
                             data-testid="schedule-experience-button"
                             type="button"
@@ -3362,7 +3362,7 @@
                         </div>
                         <section>
                           <div style="margin-top: 32px; margin-bottom: 16px">
-                            <div class="_18oyew7">
+                            <div class="calendar-sideba__sched-insight">
                               <div class="main_content__details-button-wrapper">
                                 <div>
                                   <h2
@@ -3370,9 +3370,9 @@
                                     class="heading"
                                     elementtiming="LCP-target"
                                   >
-                                    <div class="_tghtxy2">INSIGHT</div>
+                                    <div class="calendar-sideba__sched-insight-text">INSIGHT</div>
                                   </h2>
-                                  <div class="_10za72m2">
+                                  <div class="calendar-sideba__sched-insight-date">
                                     Saturdays 8 PM - 12 AM(+1) (PST) is popular
                                   </div>
                                 </div>
@@ -3402,11 +3402,11 @@
                                 </svg>
                               </div>
                               <div style="margin-top: 24px">
-                                <span class="_deeknj"
+                                <span class="calendar-sideba__sched-insight-desc"
                                   >Online Experience guests come from different
                                   time zones, and these times are in high
                                   demand.</span
-                                ><span class="_yh3k1m">
+                                ><span class="calendar-sideba__sched-insight-show-mote">
                                   <button type="button" class="tab__on-btn-container">
                                     Show data
                                   </button></span
