--- a/contact-host.html
+++ b/contact-host.html
@@ -2504,7 +2504,7 @@
                                                                           aria-disabled="false"
                                                                         >
                                                                           <div
-                                                                            class="_1ir6ymk"
+                                                                            class="calendar-sideba__qnty-sched"
                                                                           >
                                                                             <span
                                                                               >1
