--- a/insights.html
+++ b/insights.html
@@ -282,7 +282,7 @@
                                       <div class="_hl62xuw">
                                         <div class="_ufcjcm">
                                           <div class="_1gq85nd">₱400.00</div>
-                                          <div class="_l7kbrl">Earnings</div>
+                                          <div class="calendar-sideba__sched-event-note-wrapper">Earnings</div>
                                         </div>
                                       </div>
                                     </button>
@@ -296,7 +296,7 @@
                                       <div class="_7fysj1">
                                         <div class="_ufcjcm">
                                           <div class="_1gq85nd">35</div>
-                                          <div class="_l7kbrl">Page views</div>
+                                          <div class="calendar-sideba__sched-event-note-wrapper">Page views</div>
                                         </div>
                                       </div>
                                     </button>
@@ -310,7 +310,7 @@
                                       <div class="_7fysj1">
                                         <div class="_ufcjcm">
                                           <div class="_1gq85nd">1</div>
-                                          <div class="_l7kbrl">
+                                          <div class="calendar-sideba__sched-event-note-wrapper">
                                             Guests booked
                                           </div>
                                         </div>
@@ -347,7 +347,7 @@
                                               </svg>
                                             </div>
                                           </div>
-                                          <div class="_l7kbrl">
+                                          <div class="calendar-sideba__sched-event-note-wrapper">
                                             Average rating
                                           </div>
                                         </div>
