--- a/notifications.html
+++ b/notifications.html
@@ -741,7 +741,7 @@
                                                         aria-hidden="true"
                                                         class="_1xyfhitm"
                                                       >
-                                                        <span class="_1p7iugi"
+                                                        <span class="calendar-sideba__sched-event-time-wrapper"
                                                           >Airbnb Support</span
                                                         >
                                                       </div>
@@ -752,7 +752,7 @@
                                                     </div>
                                                     <div class="_1j2r3992">
                                                       <div aria-hidden="true">
-                                                        <span class="_1p7iugi"
+                                                        <span class="calendar-sideba__sched-event-time-wrapper"
                                                           >Can you describe your
                                                           issue in a few
                                                           sentences? This will
