--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -391,7 +391,7 @@
                                                             ></span
                                                           >
                                                         </div>
-                                                        <div class="_1ir6ymk">
+                                                        <div class="calendar-sideba__qnty-sched">
                                                           <div>
                                                             Expiration: 04/2026
                                                           </div>
@@ -1139,7 +1139,7 @@
                                                             ></span
                                                           >
                                                         </div>
-                                                        <div class="_1ir6ymk">
+                                                        <div class="calendar-sideba__qnty-sched">
                                                           <div>
                                                             Expiration: 04/2026
                                                           </div>
