--- a/products.html
+++ b/products.html
@@ -16636,7 +16636,7 @@
                                                                                 aria-disabled="false"
                                                                               >
                                                                                 <div
-                                                                                  class="_1ir6ymk"
+                                                                                  class="calendar-sideba__qnty-sched"
                                                                                 >
                                                                                   <span
                                                                                     >1
@@ -17130,7 +17130,7 @@
                                                                                 aria-disabled="false"
                                                                               >
                                                                                 <div
-                                                                                  class="_1ir6ymk"
+                                                                                  class="calendar-sideba__qnty-sched"
                                                                                 >
                                                                                   <span
                                                                                     >1
@@ -17823,7 +17823,7 @@
                                                                                 aria-disabled="false"
                                                                               >
                                                                                 <div
-                                                                                  class="_1ir6ymk"
+                                                                                  class="calendar-sideba__qnty-sched"
                                                                                 >
                                                                                   <span
                                                                                     >1
