--- a/profile.html
+++ b/profile.html
@@ -965,7 +965,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                             </div>
                                             <div class="_1fopc40">
                                               <div class="form__badge">
-                                                <span class="_1ir6ymk" lang="en"
+                                                <span class="calendar-sideba__qnty-sched" lang="en"
                                                   >English</span
                                                 >
                                                 <div class="form__badge-btn">
@@ -1001,7 +1001,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                 </div>
                                               </div>
                                               <div class="form__badge">
-                                                <span class="_1ir6ymk" lang="tl"
+                                                <span class="calendar-sideba__qnty-sched" lang="tl"
                                                   >Tagalog</span
                                                 >
                                                 <div class="form__badge-btn">
@@ -2104,7 +2104,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                       </div>
                                       <div class="_1fopc40">
                                         <div class="form__badge">
-                                          <span class="_1ir6ymk" lang="en"
+                                          <span class="calendar-sideba__qnty-sched" lang="en"
                                             >English</span
                                           >
                                           <div class="form__badge-btn">
@@ -2138,7 +2138,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                           </div>
                                         </div>
                                         <div class="form__badge">
-                                          <span class="_1ir6ymk" lang="tl"
+                                          <span class="calendar-sideba__qnty-sched" lang="tl"
                                             >Tagalog</span
                                           >
                                           <div class="form__badge-btn">
