--- a/resolutions.html
+++ b/resolutions.html
@@ -62,7 +62,7 @@
                 </div>
                 <ol class="l7n4lsf dir dir-ltr">
                   <li class="len26si dir dir-ltr">
-                    <span class="_1p7iugi">Send or request money - Airbnb</span>
+                    <span class="calendar-sideba__sched-event-time-wrapper">Send or request money - Airbnb</span>
                   </li>
                 </ol>
                 <span class="_2s36nz"
