--- a/signup_login.html
+++ b/signup_login.html
@@ -2879,7 +2879,7 @@
                                       >
                                       <div class="_1m2pcp0">
                                         By selecting
-                                        <span class="_1p7iugi"
+                                        <span class="calendar-sideba__sched-event-time-wrapper"
                                           >Agree and continue</span
                                         >, I agree to Airbnb’s
                                         <a
@@ -5906,7 +5906,7 @@
                                     >
                                     <div class="_1m2pcp0">
                                       By selecting
-                                      <span class="_1p7iugi"
+                                      <span class="calendar-sideba__sched-event-time-wrapper"
                                         >Agree and continue</span
                                       >, I agree to Airbnb’s
                                       <a
