--- a/submission/overview.html
+++ b/submission/overview.html
@@ -1099,23 +1099,23 @@
                                 <p class="_1mm0shk"></p>
                                 <ul class="_14mdv64">
                                   <li>
-                                    <strong class="_1p7iugi">Expertise:</strong>
+                                    <strong class="calendar-sideba__sched-event-time-wrapper">Expertise:</strong>
                                     Exceptional skill, ability, or background
                                   </li>
                                   <li>
-                                    <strong class="_1p7iugi"
+                                    <strong class="calendar-sideba__sched-event-time-wrapper"
                                       >Participation:</strong
                                     >
                                     Engaging activities that leap off the screen
                                   </li>
                                   <li>
-                                    <strong class="_1p7iugi"
+                                    <strong class="calendar-sideba__sched-event-time-wrapper"
                                       >Easy to do:</strong
                                     >
                                     Requires minimal supplies and preparation
                                   </li>
                                   <li>
-                                    <strong class="_1p7iugi"
+                                    <strong class="calendar-sideba__sched-event-time-wrapper"
                                       >Technical quality:</strong
                                     >
                                     Comfort with the Zoom platform and
