rename _1udzt2s -> page-shell-mobile__display-none

--- a/experiences.html
+++ b/experiences.html
@@ -1298,7 +1298,7 @@
         }
       }
       @media (min-width: 744px) {
-        ._1udzt2s {
+        .page-shell-mobile__display-none {
           display: none !important;
         }
       }
@@ -4907,7 +4907,7 @@
                   <div class="footer__copyright">
                     <span class="text-highlight dir dir-ltr">Footer section</span>
                     <section>
-                      <div class="_1udzt2s">
+                      <div class="page-shell-mobile__display-none">
                         <div class="page-shell-mobile__mb-16">
                           <div class="flex">
                             <span class="page-shell-mobile__lang-wrapper"
