--- a/merchandising.html
+++ b/merchandising.html
@@ -2542,7 +2542,7 @@
                                                           >
                                                         </div>
                                                         <div class="_16sb0g4v">
-                                                          <div class="_1udzt2s">
+                                                          <div class="page-shell-mobile__display-none">
                                                         <div class="hidden block-sm">
                                                           <div class="page-shell-mobile__display-none">
                                                             <a
@@ -2786,7 +2786,7 @@
                                                       </div>
                                                     </div>
                                                     <div class="_16sb0g4v">
-                                                      <div class="_1udzt2s">
+                                                      <div class="page-shell-mobile__display-none">
                                                     <div class="hidden block-sm">
                                                       <div class="page-shell-mobile__display-none">
                                                         <div
@@ -12886,7 +12886,7 @@
                                                   >Footer section</span
                                                 >
                                                 <section>
-                                                  <div class="_1udzt2s">
+                                                  <div class="page-shell-mobile__display-none">
                                                     <div class="page-shell-mobile__mb-16">
                                                       <div class="flex">
                                                         <span class="page-shell-mobile__lang-wrapper"
