--- a/wishlists.html
+++ b/wishlists.html
@@ -226,7 +226,7 @@
                             </div>
                             <main id="site-content" class="relative">
                               <section>
-                                <div class="_1udzt2s">
+                                <div class="page-shell-mobile__display-none">
                                   <div id="FMP-target">
                                     <a href="/wishlists/1148602671"
                                       ><div class="main_content__details-button-wrapper">
@@ -1443,7 +1443,7 @@
                             >Footer section</span
                           >
                           <section>
-                            <div class="_1udzt2s">
+                            <div class="page-shell-mobile__display-none">
                               <div class="page-shell-mobile__mb-16">
                                 <div class="flex">
                                   <span class="page-shell-mobile__lang-wrapper"
