--- a/help.html
+++ b/help.html
@@ -193,7 +193,7 @@
                             </div>
                           </h1>
                           <div class="s1mr654p dir dir-ltr">
-                            <div class="_1udzt2s">
+                            <div class="page-shell-mobile__display-none">
                               <button
                                 class="s1pd4s60 dir dir-ltr"
                                 type="button"
@@ -428,7 +428,7 @@
                                             ></a>
                                           </div>
                                         </div>
-                                        <div class="_1udzt2s">
+                                        <div class="page-shell-mobile__display-none">
                                           <div class="gtn3g2w dir dir-ltr">
                                             <div class="t1fc0s08 dir dir-ltr">
                                               <a
@@ -1447,7 +1447,7 @@
                                           </h2>
                                         </div>
                                         <div class="main_content__sidebar-legend-list">
-                                          <div class="_1udzt2s">
+                                          <div class="page-shell-mobile__display-none">
                                             <div>
                                               <span class="new-arrow-underscore"
                                                 >List containing 2 items. Use
@@ -2510,7 +2510,7 @@
                                             ></a>
                                           </div>
                                         </div>
-                                        <div class="_1udzt2s">
+                                        <div class="page-shell-mobile__display-none">
                                           <div class="gtn3g2w dir dir-ltr">
                                             <div class="t1fc0s08 dir dir-ltr">
                                               <a
@@ -3566,7 +3566,7 @@
                                             ></a>
                                           </div>
                                         </div>
-                                        <div class="_1udzt2s">
+                                        <div class="page-shell-mobile__display-none">
                                           <div class="gtn3g2w dir dir-ltr">
                                             <div class="t1fc0s08 dir dir-ltr">
                                               <a
@@ -4620,7 +4620,7 @@
                                             ></a>
                                           </div>
                                         </div>
-                                        <div class="_1udzt2s">
+                                        <div class="page-shell-mobile__display-none">
                                           <div class="gtn3g2w dir dir-ltr">
                                             <div class="t1fc0s08 dir dir-ltr">
                                               <a
@@ -5788,7 +5788,7 @@
                     <div class="footer__copyright">
                       <span class="text-highlight dir dir-ltr">Footer section</span>
                       <section>
-                        <div class="_1udzt2s">
+                        <div class="page-shell-mobile__display-none">
                           <div class="page-shell-mobile__mb-16">
                             <div class="flex">
                               <span class="page-shell-mobile__lang-wrapper"
