--- a/products.html
+++ b/products.html
@@ -7249,7 +7249,7 @@
                                       >Footer section</span
                                     >
                                     <section>
-                                      <div class="_1udzt2s">
+                                      <div class="page-shell-mobile__display-none">
                                         <div class="page-shell-mobile__mb-16">
                                           <div class="flex">
                                             <span class="page-shell-mobile__lang-wrapper"
@@ -20782,7 +20782,7 @@
                                     >Footer section</span
                                   >
                                   <section>
-                                    <div class="_1udzt2s">
+                                    <div class="page-shell-mobile__display-none">
                                       <div class="page-shell-mobile__mb-16">
                                         <div class="flex">
                                           <span class="page-shell-mobile__lang-wrapper"
