--- a/resources.html
+++ b/resources.html
@@ -459,7 +459,7 @@
                               </div>
                               <div class="_1shk545">
                                 <div class="_1rjvhdp">
-                                  <div class="_1udzt2s">
+                                  <div class="page-shell-mobile__display-none">
                                     <ul
                                       class="feature__airbnb-ul"
                                       style="
@@ -5370,7 +5370,7 @@
                     <div class="footer__copyright">
                       <span class="text-highlight dir dir-ltr">Footer section</span>
                       <section>
-                        <div class="_1udzt2s">
+                        <div class="page-shell-mobile__display-none">
                           <div class="page-shell-mobile__mb-16">
                             <div class="flex">
                               <span class="page-shell-mobile__lang-wrapper"
