--- a/places.html
+++ b/places.html
@@ -13168,7 +13168,7 @@
                                                 </div>
                                                 <div class="relative">
                                                   <div
-                                                    class="_1mtnjq3q"
+                                                    class="landing-page__card-img-overlay"
                                                     style="
                                                       background: white;
                                                       --dls-basecard-padding-top: 100%;
@@ -13415,7 +13415,7 @@
                                                 </div>
                                                 <div class="relative">
                                                   <div
-                                                    class="_1mtnjq3q"
+                                                    class="landing-page__card-img-overlay"
                                                     style="
                                                       background: white;
                                                       --dls-basecard-padding-top: 100%;
@@ -13642,7 +13642,7 @@
                                                 </div>
                                                 <div class="relative">
                                                   <div
-                                                    class="_1mtnjq3q"
+                                                    class="landing-page__card-img-overlay"
                                                     style="
                                                       background: white;
                                                       --dls-basecard-padding-top: 100%;
@@ -13869,7 +13869,7 @@
                                                 </div>
                                                 <div class="relative">
                                                   <div
-                                                    class="_1mtnjq3q"
+                                                    class="landing-page__card-img-overlay"
                                                     style="
                                                       background: white;
                                                       --dls-basecard-padding-top: 100%;
