rename covid safety

--- a/basics.html
+++ b/basics.html
@@ -759,7 +759,7 @@
                                   You should be able to read, write, and speak
                                   in this language.
                                 </div>
-                                <div class="_9dd4bh">
+                                <div class="landing-page__question-content">
                                   <div
                                     id="primary-language-row"
                                     aria-disabled="false"
