--- a/invite-friends.html
+++ b/invite-friends.html
@@ -431,7 +431,7 @@
                   <div class="footer__copyright">
                     <span class="text-highlight dir dir-ltr">Footer section</span>
                     <section>
-                      <div class="_1udzt2s">
+                      <div class="footer__copyright-container-mb">
                         <div class="page-shell-mobile__mb-16">
                           <div class="flex">
                             <span class="page-shell-mobile__lang-wrapper"
@@ -837,7 +837,7 @@
                       elementtiming="LCP-target"
                       class="heading"
                     >
-                      <div class="_s1tlw0m">People you’ve invited</div>
+                      <div class="landing-page__faq-question">People you’ve invited</div>
                     </h1>
                     <div class="hero-banner__description">
                       The travel credit you earn can be used to book your next
