--- a/reviews.html
+++ b/reviews.html
@@ -362,7 +362,7 @@
                               <div>
                                 <span class="text-highlight dir dir-ltr"></span>
                                 <div class="_1xykmvt">
-                                  <div class="_1udzt2s hidden-md">
+                                  <div class="footer__copyright-container-mb hidden-md">
                                     <div
                                       id="expectations_option_very_high"
                                       aria-disabled="false"
@@ -441,7 +441,7 @@
                                   </div>
                                 </div>
                                 <div class="_1xykmvt">
-                                  <div class="_1udzt2s hidden-md">
+                                  <div class="footer__copyright-container-mb hidden-md">
                                     <div
                                       id="expectations_option_high"
                                       aria-disabled="false"
@@ -520,7 +520,7 @@
                                   </div>
                                 </div>
                                 <div class="_1xykmvt">
-                                  <div class="_1udzt2s hidden-md">
+                                  <div class="footer__copyright-container-mb hidden-md">
                                     <div
                                       id="expectations_option_neutral"
                                       aria-disabled="false"
@@ -599,7 +599,7 @@
                                   </div>
                                 </div>
                                 <div class="_1xykmvt">
-                                  <div class="_1udzt2s hidden-md">
+                                  <div class="footer__copyright-container-mb hidden-md">
                                     <div
                                       id="expectations_option_low"
                                       aria-disabled="false"
@@ -678,7 +678,7 @@
                                   </div>
                                 </div>
                                 <div class="_1xykmvt">
-                                  <div class="_1udzt2s hidden-md">
+                                  <div class="footer__copyright-container-mb hidden-md">
                                     <div
                                       id="expectations_option_very_low"
                                       aria-disabled="false"
