--- a/dashboard.html
+++ b/dashboard.html
@@ -947,7 +947,7 @@
         }
       }
       @media (min-width: 744px) {
-        ._1udzt2s {
+        .footer__copyright-container-mb {
           display: none !important;
         }
       }
@@ -3284,7 +3284,7 @@
                   <div class="footer__copyright">
                     <span class="text-highlight dir dir-ltr">Footer section</span>
                     <section>
-                      <div class="_1udzt2s">
+                      <div class="footer__copyright-container-mb">
                         <div class="page-shell-mobile__mb-16">
                           <div class="flex">
                             <span class="page-shell-mobile__lang-wrapper"
