--- a/login-security.html
+++ b/login-security.html
@@ -279,7 +279,7 @@
                                             elementtiming="LCP-target"
                                             class="heading"
                                           >
-                                            <div class="_s1tlw0m">Login</div>
+                                            <div class="landing-page__faq-question">Login</div>
                                           </h1>
                                         </div>
                                         <div class="border-bottom-muted">
@@ -516,7 +516,7 @@
                                             elementtiming="LCP-target"
                                             class="heading"
                                           >
-                                            <div class="_s1tlw0m">
+                                            <div class="landing-page__faq-question">
                                               Social accounts
                                             </div>
                                           </h1>
@@ -620,7 +620,7 @@
                                             elementtiming="LCP-target"
                                             class="heading"
                                           >
-                                            <div class="_s1tlw0m">
+                                            <div class="landing-page__faq-question">
                                               Device history
                                             </div>
                                           </h1>
@@ -1047,7 +1047,7 @@
                                       elementtiming="LCP-target"
                                       class="heading"
                                     >
-                                      <div class="_s1tlw0m">Account</div>
+                                      <div class="landing-page__faq-question">Account</div>
                                     </h1>
                                   </div>
                                   <div class="_1okh7pi0">
@@ -1412,7 +1412,7 @@
                                               elementtiming="LCP-target"
                                               class="heading"
                                             >
-                                              <div class="_s1tlw0m">Login</div>
+                                              <div class="landing-page__faq-question">Login</div>
                                             </h2>
                                           </div>
                                           <div class="border-bottom-muted">
@@ -1665,7 +1665,7 @@
                                               elementtiming="LCP-target"
                                               class="heading"
                                             >
-                                              <div class="_s1tlw0m">
+                                              <div class="landing-page__faq-question">
                                                 Social accounts
                                               </div>
                                             </h2>
@@ -1769,7 +1769,7 @@
                                               elementtiming="LCP-target"
                                               class="heading"
                                             >
-                                              <div class="_s1tlw0m">
+                                              <div class="landing-page__faq-question">
                                                 Device history
                                               </div>
                                             </h2>
@@ -2209,7 +2209,7 @@
                                         elementtiming="LCP-target"
                                         class="heading"
                                       >
-                                        <div class="_s1tlw0m">Account</div>
+                                        <div class="landing-page__faq-question">Account</div>
                                       </h2>
                                     </div>
                                     <div class="_1okh7pi0">
@@ -2409,7 +2409,7 @@
                             >Footer section</span
                           >
                           <section>
-                            <div class="_1udzt2s">
+                            <div class="footer__copyright-container-mb">
                               <div class="page-shell-mobile__mb-16">
                                 <div class="flex">
                                   <span class="page-shell-mobile__lang-wrapper"
