--- a/profile.html
+++ b/profile.html
@@ -2838,7 +2838,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                             >Footer section</span
                           >
                           <section>
-                            <div class="_1udzt2s">
+                            <div class="footer__copyright-container-mb">
                               <div class="page-shell-mobile__mb-16">
                                 <div class="flex">
                                   <span class="page-shell-mobile__lang-wrapper"
