--- a/signup_login.html
+++ b/signup_login.html
@@ -6220,7 +6220,7 @@
                             >Footer section</span
                           >
                           <section>
-                            <div class="_1udzt2s">
+                            <div class="footer__copyright-container-mb">
                               <div class="page-shell-mobile__mb-16">
                                 <div class="flex">
                                   <span class="page-shell-mobile__lang-wrapper"
